--- a/modules/app/src/main/res/values/layout_custom_styles.xml
+++ b/modules/app/src/main/res/values/layout_custom_styles.xml
@@ -6,6 +6,7 @@
     </style>
 
     <style name="CategoryEntityWrapper">
-        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
     </style>
 </resources>
