--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_other_activities_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_other_activities_layout.xml
@@ -2,9 +2,21 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.implementations.StudentActivity">
+    tools:context=".activities.implementations.student.StudentActivity">
+
+    <data>
+
+        <import type="com.lonn.studentassistant.views.implementations.EntityViewComparatorHolder" />
+
+        <import type="com.lonn.studentassistant.viewModels.entities.OtherActivityViewModel" />
+
+        <variable
+            name="otherActivities"
+            type="java.util.Collection&lt;OtherActivityViewModel&gt;" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/ScreenLayoutWrapped"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -13,7 +25,6 @@
             style="@style/DarkTitleShadowed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="Other Activities"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,9 +41,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:childEntities="@{otherActivities}"
+                    android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_TITLE_COMPARATOR}"
+                    android:entityName="@{`other activity`}"
+                    android:permissionLevel="@{1}"
+                    android:showEmpty="@{false}"
+                    android:showHeader="@{false}" />
+
             </LinearLayout>
         </ScrollView>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
