--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.implementations.StudentActivity">
+    tools:context=".activities.implementations.student.StudentActivity">
 
     <data>
 
@@ -12,6 +12,7 @@
     </data>
 
     <ScrollView
+        style="@style/ScreenLayoutWrapped"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
