--- a/modules/app/src/main/res/values/layout_custom_styles.xml
+++ b/modules/app/src/main/res/values/layout_custom_styles.xml
@@ -9,4 +9,11 @@
         <item name="android:layout_marginBottom">4dp</item>
         <item name="android:layout_marginTop">4dp</item>
     </style>
+
+    <style name="ScreenLayoutWrapped" parent="EntityActivityWrapper">
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingStart">4dp</item>
+        <item name="android:paddingEnd">4dp</item>
+    </style>
 </resources>
